@@ -4,6 +4,7 @@ import com.blogservice.api.domain.Post;
 import com.blogservice.api.repository.PostRepository;
 import com.blogservice.api.request.PostCreate;
 import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -21,6 +22,11 @@ class PostServiceTest {
     @Autowired
     private PostRepository postRepository;
 
+    @BeforeEach
+    void clean() {
+        postRepository.deleteAll();
+    }
+
     @Test
     @DisplayName("글 작성")
     void test1() {
@@ -35,9 +41,27 @@ class PostServiceTest {
 
         // then
         assertEquals(1L, postRepository.count());
-        Post post = postRepository.findAll().get(0);
+        Post post = postRepository.findAll().getFirst();
         assertEquals("제목입니다.", post.getTitle());
         assertEquals("내용입니다.", post.getContent());
     }
 
+    @Test
+    @DisplayName("글 1개 조회")
+    void test2() {
+        // given
+        Post requestPost = Post.builder()
+                .title("foo").content("bar")
+                .build();
+        postRepository.save(requestPost);
+
+        // when
+        Post post = postService.get(requestPost.getId());
+
+        // then
+        assertNotNull(post);
+        assertEquals(1L, postRepository.count());
+        assertEquals("foo", post.getTitle());
+        assertEquals("bar", post.getContent());
+    }
 }
